<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_logon"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="stateVisible|adjustResize"
    android:orientation="vertical"
    tools:context="com.zt.wc.githubtest.ui.LogonActivity">
    <!--
    加入下面的属性，如果弹出软键盘，整体界面会上移
    android:windowSoftInputMode="stateVisible|adjustResize"
    -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/logon_welcome"
        android:textSize="40sp"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/logon_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">

        <EditText
            android:id="@+id/logon_name_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/logon_hint_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/logon_password_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">

        <EditText
            android:id="@+id/logon_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/logon_hint_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/logon_email"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:hint="@string/logon_hint_email"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/logon"
        android:layout_width="match_parent"
        android:text="@string/logon"
        android:layout_height="wrap_content"
        />


</LinearLayout>
